@@ -1,82 +1,82 @@
 package com.skinstore.service;
 
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import com.skinstore.dto.EstadoDTO;
 import com.skinstore.dto.EstadoResponseDTO;
 import com.skinstore.model.Estado;
 import com.skinstore.repository.EstadoRepository;
-import com.skinstore.validation.ValidationException;
-
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
-import jakarta.validation.Valid;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
+import jakarta.validation.Validator;
+import jakarta.ws.rs.NotFoundException;
 
 @ApplicationScoped
 public class EstadoServiceImpl implements EstadoService {
     @Inject
-    public EstadoRepository estadoRepository;
+    EstadoRepository repository;
+
+    @Inject
+    Validator validator;
 
     @Override
     @Transactional
-    public EstadoResponseDTO create(@Valid EstadoDTO dto) {
-        validarNomeEstado(dto.nome());
-
-        Estado estado = new Estado();
-        estado.setNome(dto.nome());
-        estado.setSigla(dto.sigla());
-
-        estadoRepository.persist(estado);
-        return EstadoResponseDTO.valueOf(estado);
+    public EstadoResponseDTO insert(EstadoDTO dto) {
+        validar(dto);
+        Estado novoEstado = new Estado();
+        novoEstado.setNome(dto.nome());
+        novoEstado.setSigla(dto.sigla());
+        repository.persist(novoEstado);
+        return EstadoResponseDTO.valueOf(novoEstado);
     }
 
-    public void validarNomeEstado(String nome) {
-        Estado estado = estadoRepository.findByNomeCompleto(nome);
-        if(estado != null)
-            throw new ValidationException("nome", "Esse nome '"+nome+"' já existe.");
+    private void validar(EstadoDTO estadoDTO) throws ConstraintViolationException {
+        Set<ConstraintViolation<EstadoDTO>> violations = validator.validate(estadoDTO);
+        if (!violations.isEmpty())
+            throw new ConstraintViolationException(violations);
     }
 
     @Override
     @Transactional
-    public void update(Long id, EstadoDTO dto) {
-        Estado estadoUpdate = estadoRepository.findById(id);
-
-        estadoUpdate.setNome(dto.nome());
-        estadoUpdate.setSigla(dto.sigla());
+    public EstadoResponseDTO update(EstadoDTO dto, Long id) throws ConstraintViolationException{
+        validar(dto);
+        Estado estadoExistente = repository.findById(id);
+        estadoExistente.setNome(dto.nome());
+        estadoExistente.setSigla(dto.sigla());
+        return EstadoResponseDTO.valueOf(estadoExistente);
     }
 
     @Override
     @Transactional
     public void delete(Long id) {
-        estadoRepository.deleteById(id);
+        if (!repository.deleteById(id))
+            throw new NotFoundException();
     }
 
     @Override
     public EstadoResponseDTO findById(Long id) {
-        Estado estado = estadoRepository.findById(id);
-        if (estado != null)
-            return EstadoResponseDTO.valueOf(estado);
-        return null;
+        Estado estado = repository.findById(id);
+        if (estado == null) {
+            throw new EntityNotFoundException("Estado não encontrado com ID: " + id);
+        }
+        return  EstadoResponseDTO.valueOf(estado);
     }
 
     @Override
-    public List<EstadoResponseDTO> findAll() {
-        return estadoRepository
-                .listAll()
-                .stream()
-                .map(e -> EstadoResponseDTO.valueOf(e)).toList();
+    public List<EstadoResponseDTO> findByNome(String nome){
+        List<Estado> list = repository.findByNome(nome);
+        return list.stream().map(u -> EstadoResponseDTO.valueOf(u)).collect(Collectors.toList());
     }
 
     @Override
-    public List<EstadoResponseDTO> findByNome(String nome) {
-        return estadoRepository.findByNome(nome).stream()
-                .map(e -> EstadoResponseDTO.valueOf(e)).toList();
+    public List<EstadoResponseDTO> findByAll() {
+        return repository.listAll().stream().map(u -> EstadoResponseDTO.valueOf(u)).toList();
     }
 
-    @Override
-    public List<EstadoResponseDTO> findBySigla(String sigla) {
-        return estadoRepository.findBySigla(sigla).stream()
-                .map(e -> EstadoResponseDTO.valueOf(e)).toList();
-    }
 }
